tests/baselines/reference/optionalBindingParameters1.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(1,14): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts(7,5): error TS2345: Argument of type '[真假, 数字, ""]' is not assignable to parameter of type '[文字, 数字, 真假]'.
  Type '真假' is not assignable to type '文字'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParameters1.ts (2 errors) ====
    function foo([x,y,z]?: [string, number, boolean]) {
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
        ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[真假, 数字, ""]' is not assignable to parameter of type '[文字, 数字, 真假]'.
!!! error TS2345:   Type '真假' is not assignable to type '文字'.